plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'net.modtale'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

springBoot {
    mainClass = 'net.modtale.ModtaleApplication'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.session:spring-session-data-mongodb:4.0.0-M2'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.1.0'
    implementation 'dev.samstevens.totp:totp-spring-boot-starter:1.7.1'
    implementation 'com.github.ben-manes.caffeine:caffeine'

    implementation platform('software.amazon.awssdk:bom:2.54.11')
    implementation 'software.amazon.awssdk:s3'

    implementation 'com.giffing.bucket4j.spring.boot.starter:bucket4j-spring-boot-starter:0.14.0'
    implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20260313.1'
    implementation 'net.coobird:thumbnailator:0.4.21'
    implementation 'com.github.usefulness:webp-imageio:0.11.0'

    implementation 'com.github.weisj:jsvg:2.1.0'

    implementation 'org.vineflower:vineflower:1.12.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.1.3'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('statusServiceJar', org.springframework.boot.gradle.tasks.bundling.BootJar) {
    group = 'build'
    description = 'Builds the detached Modtale status service jar.'
    archiveClassifier = 'status'
    mainClass = 'net.modtale.status.StatusServiceApplication'
    targetJavaVersion = JavaVersion.VERSION_21
    classpath = sourceSets.main.runtimeClasspath
}
